[package]
name = "advent-of-code-2019"
version = "0.1.0"
authors = ["André Samuelsson <andresamuelsson94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
permute = "0.1.0"
crossbeam-channel = "0.4.0"
log = "0.4.8"
env_logger = "0.7.1"
itertools = "0.8.2"